--- a/view/Login.html
+++ b/view/Login.html
@@ -62,6 +62,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
         <img src="./Resources/Logo1.png" width="10%" height="10%" alt="error" loading="lazy">
         <a class="navbar-brand ml-3 align-content-lg-start text-light" href="#">Navbar</a>
         <div class="collapse navbar-collapse" id="navbarNav">
