--- a/view/Register.html
+++ b/view/Register.html
@@ -1,152 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Register</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <style>
-         :root {
-            --text-light: rgba(255, 255, 255, 0.9);
-            --text-lighter: rgba(255, 255, 255, 0.9);
-            --spacing-s: 8px;
-            --spacing-m: 16px;
-            --spacing-l: 18px;
-            --spacing-xl: 32px;
-            --spacing-xxl: 64px;
-            --width-container: 1200px;
-        }
-        
-        body {
-            height: 100%;
-            background-color: #f08621;
-        }
-        
-        .card-grid {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            grid-column-gap: var(--spacing-l);
-            width: 100%;
-        }
-        
-        @media(min-width: 540px) {
-            .card-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-        
-        @media(min-width: 960px) {
-            .card-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-        
-        .card {
-            list-style: none;
-            position: relative;
-            border-radius: 1em;
-        }
-        
-        .card:before {
-            content: '';
-            display: block;
-            padding-bottom: 45%;
-            width: 100%;
-        }
-        
-        .card__background {
-            background-size: cover;
-            background-position: center;
-            border-radius: var(--spacing-l);
-            bottom: 0;
-            filter: brightness(0.75) saturate(1.2) contrast(0.85);
-            left: 0;
-            position: absolute;
-            right: 0;
-            top: 0;
-            transform-origin: center;
-            transform: scale(1) translateZ(0);
-            transition: filter 200ms linear, transform 200ms linear;
-        }
-        
-        .card:hover .card__background {
-            transform: scale(1.02) translateZ(0);
-        }
-        
-        .card-grid:hover>.card:not(:hover) .card__background {
-            filter: brightness(0.5) saturate(0) contrast(1.2) blur(5px);
-        }
-        
-        .card__content {
-            left: 0;
-            padding: var(--spacing-l);
-            position: absolute;
-            top: 0;
-        }
-        
-        .card__category {
-            color: var(--text-light);
-            font-size: 0.9rem;
-            margin-bottom: var(--spacing-s);
-            text-transform: uppercase;
-        }
-        
-        .card__heading {
-            color: var(--text-lighter);
-            font-size: 1.9rem;
-            text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
-            line-height: 1.4;
-            word-spacing: 100vw;
-        }
-    </style>
-</head>
+    <head>
+        <title>Register</title>
+        <meta charset="UTF-8">
+        <link rel="icon" href="./Resources/logo.ico">
+        <link rel="stylesheet" href="./css/register.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
-        <img src="./Resources/Logo1.png" width="10%" height="10%" alt="error" loading="lazy">
-        <a class="navbar-brand ml-3 align-content-lg-start text-light" href="#">Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active ">
-                    <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav><br>
+    <body class="bodyClass">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
+                <img src="./Resources/Logo1.png" width="6%" height="6%" alt="logoGetDanceNow">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active ">
+                            <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
-    <h1 class="text-light text-center">!Bienvenido a GetDanceNow!</h1>
-    <h5 class="text-light text-center">Seleccione su tipo de registro</h5><br>
-
-    <section class="hero-section">
-        <div class="card-grid text-center">
-            <a class="card text-center" href="./RegisterStudent.html">
+        <section class="hero-section">
+            <h1 class="text-light text-center">!Bienvenido a GetDanceNow!</h1>
+            <h3 class="text-light text-center">Seleccione el tipo de registro</h3>
+            <div class="card-grid">
+              <a class="card" href="./RegisterStudent.html">
                 <div class="card__background" style="background-image: url(https://www.xtrafondos.com/wallpapers/resized/chica-anime-con-ojos-morados-con-tapabocas-5525.jpg?s=large)"></div>
-                <div class="card__content w-100">
+                <div class="card__content">
                     <h3 class="card__heading">Estudiante</h3>
                     <p class="card__category">Podrás:</p><br>
                     <p class="card__category">- Encontrar las academias más cerca de tí.</p>
                     <p class="card__category">- Inscribirte a los cursos que ofrecen.</p><br>
                 </div>
-            </a>
-
-            <a class="card " href="./RegisterAcademia.html">
+              </a>
+    
+              <a class="card" href="./RegisterAcademia.html">
                 <div class="card__background" style="background-image: url(https://www.xtrafondos.com/wallpapers/resized/chica-anime-con-ojos-rojos-y-mascara-5526.jpg?s=large)"></div>
-                <div class="card__content text-center w-100">
+                <div class="card__content">
                     <h3 class="card__heading">Academia</h3><br>
                     <p class="card__category">Podrás:</p><br>
                     <p class="card__category">- Administrar sus clases.</p>
                     <p class="card__category">- Promocionarse.</p><br>
                 </div>
-            </a>
+              </a>
+              
             <div>
-    </section>
-
-</body>
+    
+        </section>
+    </body>
+</html>
