--- a/view/RegisterAcademia.html
+++ b/view/RegisterAcademia.html
@@ -1,141 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>Registro - Academia</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/RegisterAcademia.css">
+        <link rel="icon" href="./Resources/logo.ico">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="./js/AcademiaRegister.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <body class="bodyClass">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
+                <img src="./Resources/Logo1.png" width="6%" height="6%" alt="logoGetDanceNow">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active ">
+                            <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <h1 class="text-light text-center">Registro de la academia</h1>
+        <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+            <div class="card-body">
+                <form>
+                    <div class="row mt-3 ml-4">
+                        <div class="col">
+                            <h6 class="mt-2"> Insertar un logo</h6>
+                            <input type="file" id="photo" />
+                        </div>
+                    </div>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <style>
-        body {
-            background-color: #f08621;
-        }
-        
-        .ClaseBoton:not(:hover) {
-            cursor: pointer;
-            border-radius: 5em;
-            color: #fff;
-            background: linear-gradient(to right, #000000, #333333);
-            border: 0;
-            padding-left: 40px;
-            padding-right: 40px;
-            padding-bottom: 10px;
-            padding-top: 10px;
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 13px;
-            box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-        }
-        
-        .ClaseBoton:hover {
-            border-radius: 20px;
-            border: 2px solid #353535;
-            background-color: #f08621;
-            color: #FFFFFF;
-            font-size: 12px;
-            font-weight: bold;
-            padding: 12px 45px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            transition: transform 80ms ease-in;
-        }
-        
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            border-radius: 2em;
-            transition: 0.3s;
-            width: 40%;
-        }
-        
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        }
-    </style>
-</head>
+                    <div class="row mt-4 ml-4 mr-4">
+                        <h6><label>Nombre de la academia</label></h6>
+                        <input id="academiname" type="text" class="form-control" placeholder="Nombre de la academia">
+                    </div>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
-        <img src="./Resources/Logo1.png" width="10%" height="10%" alt="error" loading="lazy">
-        <a class="navbar-brand ml-3 align-content-lg-start text-light" href="#">Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active ">
-                    <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
+                    <div class="row mt-4 ml-2">
+                        <div class="col">
+                            <h6><label>Contacto</label></h6>
+                            <input id="contact" type="text" class="form-control" placeholder="Contacto">
+                        </div>
+                        <div class="col mr-4">
+                            <h6><label>Teléfono</label></h6>
+                            <input id="number" type="text" class="form-control" placeholder="Teléfono">
+                        </div>
+                    </div>
+
+                    <div class="row mt-4 ml-4 mr-4">
+                        <h6><label>Dirección</label></h6>
+                        <input id="direccion" type="text" class="form-control" placeholder="Dirección">
+                    </div>
+
+                    <div class="row mt-4 ml-4 mr-4">
+                        <h6><label>Correo electrónico</label></h6>
+                        <input id="correo" type="text" class="form-control" placeholder="Correo electrónico">
+                    </div>
+
+                    <div class="row mt-4 ml-4 mr-4">
+                        <h6><label>Contraseña nueva</label></h6>
+                        <input id="password" type="password" class="form-control" placeholder="Contraseña nueva">
+                    </div>
+
+                    <div class="row mt-4 ml-4">
+                        <h4 class="mt-2"> Descripción</h4>
+                    </div>
+                    <div class="row mt-2 ml-4 mr-4">
+                        <textarea id="descripcion" cols="150" rows="4"></textarea>
+                    </div>
+
+                    <div class="row mt-3 ml-4">
+                        <input type="button" id="Register" class="ClaseBoton" value="Siguiente">
+                        <a href="./Register.html" class="ClaseBoton">Cancelar</a>
+                    </div>
+                </form>
+            </div>
         </div>
-    </nav><br>
-
-    <h1 class="text-light text-center">Registro de la academia</h1>
-    <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
-        <div class="card-body">
-            <form>
-                <div class="row mt-3">
-                    <div class="col">
-                        <h6 class="mt-2"> Insertar un logo</h6>
-                        <input type="file" id="photo" />
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <h6><label>Nombre de la academia</label></h6>
-                    <input id="academiname" type="text" class="form-control" placeholder="Nombre de la academia">
-                </div>
-
-                <div class="row mt-4">
-                    <div class="col">
-                        <h6><label>Contacto</label></h6>
-                        <input id="contact" type="text" class="form-control" placeholder="Contacto">
-                    </div>
-                    <div class="col">
-                        <h6><label>Teléfono</label></h6>
-                        <input id="number" type="text" class="form-control" placeholder="Teléfono">
-                    </div>
-                </div>
-
-                <div class="row mt-4">
-                    <h6><label>Dirección</label></h6>
-                    <input id="direccion" type="text" class="form-control" placeholder="Dirección">
-                </div>
-
-                <div class="row mt-4">
-                    <h6><label>Correo electrónico</label></h6>
-                    <input id="correo" type="text" class="form-control" placeholder="Correo electrónico">
-                </div>
-
-                <div class="row mt-4">
-                    <h6><label>Contraseña nueva</label></h6>
-                    <input id="password" type="password" class="form-control" placeholder="Contraseña nueva">
-                </div>
-
-                <div class="row mt-4">
-                    <h4 class="mt-2"> Descripción</h4>
-                </div>
-                <div class="row mt-2">
-                    <textarea id="descripcion" cols="150" rows="4"></textarea>
-                </div>
-
-                <div class="row mt-3">
-                    <input type="button" id="Register" class="ClaseBoton" value="Siguiente">
-                </div>
-            </form>
-        </div>
-    </div>
-
-
-    <script src="./js/AcademiaRegister.js"></script>
-
-</body>
+        </section>
+    </body>
+</html>
