--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -7,51 +7,13 @@
         <div>
             <div class="card-body">
                 <div class="row mt-5">
-                    <div class="col-lg-4">
-                        <div class="text-center card-box">
-                            <div class="member-card pt-2 pb-2">
-                                <div class="col">
-                                    <div class="mx-auto row">
-                                        <h4 class="mr-4">ACADEMIA</h4>
-                                        <ul class="social-links list-inline">
-                                            <li class="list-inline-item"><a title="" data-placement="top"
-                                                    data-toggle="tooltip" class="tooltips" href=""
-                                                    data-original-title="Editar"><i class="fa fa-heart"></i></a></li>
-                                            <li class="list-inline-item"><a title="" data-placement="top"
-                                                    data-toggle="tooltip" class="tooltips" href=""
-                                                    data-original-title="Twitter"><i class="fa fa-eye"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                
-                                <div class="col mt-4">
-                                    <div class="row">
-                                        <h4 class="mr-2">Direccion</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    Aqui va una direccion equisde lol equisde
-                                </p>
-                                <div class="col">
-                                    <div class="row">
-                                        <h4 class="mr-2">Descripcion</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, quaerat impedit!
-                                    Reiciendis quibusdam quasi harum, ullam id hic dolor molestias aspernatur eveniet
-                                    unde quas laudantium amet, porro optio, ad nesciunt.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4" name="Target">
                         <div class="text-center card-box">
                             <div class="member-card pt-2 pb-2">
                                 <div class="col">
                                     <div class="mx-auto row">
-                                        <h4 class="mr-4">ACADEMIA</h4>
+                                        <h4 class="mr-4">{{academia.nombre}}</h4>
                                         <ul class="social-links list-inline">
                                             <li class="list-inline-item"><a title="" data-placement="top"
                                                     data-toggle="tooltip" class="tooltips" href=""
@@ -69,7 +31,7 @@
                                     </div>
                                 </div>
                                 <p class="text-muted">
-                                    Aqui va una direccion equisde lol equisde
+                                    {{academia.Direccion}}
                                 </p>
                                 <div class="col">
                                     <div class="row">
@@ -77,48 +39,7 @@
                                     </div>
                                 </div>
                                 <p class="text-muted">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, quaerat impedit!
-                                    Reiciendis quibusdam quasi harum, ullam id hic dolor molestias aspernatur eveniet
-                                    unde quas laudantium amet, porro optio, ad nesciunt.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="text-center card-box">
-                            <div class="member-card pt-2 pb-2">
-                                <div class="col">
-                                    <div class="mx-auto row">
-                                        <h4 class="mr-4">ACADEMIA</h4>
-                                        <ul class="social-links list-inline">
-                                            <li class="list-inline-item"><a title="" data-placement="top"
-                                                    data-toggle="tooltip" class="tooltips" href=""
-                                                    data-original-title="Editar"><i class="fa fa-heart"></i></a></li>
-                                            <li class="list-inline-item"><a title="" data-placement="top"
-                                                    data-toggle="tooltip" class="tooltips" href=""
-                                                    data-original-title="Twitter"><i class="fa fa-eye"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                
-                                <div class="col mt-4">
-                                    <div class="row">
-                                        <h4 class="mr-2">Direccion</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    Aqui va una direccion equisde lol equisde
-                                </p>
-                                <div class="col">
-                                    <div class="row">
-                                        <h4 class="mr-2">Descripcion</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, quaerat impedit!
-                                    Reiciendis quibusdam quasi harum, ullam id hic dolor molestias aspernatur eveniet
-                                    unde quas laudantium amet, porro optio, ad nesciunt.
+                                    {{academia.Descripcion}}
                                 </p>
                             </div>
                         </div>
@@ -129,5 +50,4 @@
             <!-- container -->
         </div>
     </div>
-    <script src="/js/Panel.js"></script>
 </div>
