--- a/src/views/links/ClassByID.hbs
+++ b/src/views/links/ClassByID.hbs
@@ -7,7 +7,7 @@
         <div>
             <div class="card-body">
                 <div class="row mt-5">
-                    {{#each academias}}
+                    {{#each clases}}
                     <div class="col-lg-4" name="Target">
                         <div class="text-center card-box">
                             <div class="member-card pt-2 pb-2">
@@ -16,26 +16,11 @@
                                 </div>
                                 <ul class="social-links list-inline">
                                     <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip"
-                                            class="tooltips" href="/links/Clases/{{id}} "  data-original-title="Ver"><i
+                                            class="tooltips" href="#"  data-original-title="Ver"><i
                                                 class="fa fa-eye"></i></a></li>
                                 </ul>
 
-                                <div class="col mt-4">
-                                    <div class="row">
-                                        <h4 class="mr-2">Número telefónico</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    {{numero}}
-                                </p>
-                                <div class="col">
-                                    <div class="row">
-                                        <h4 class="mr-2">Descripción</h4>
-                                    </div>
-                                </div>
-                                <p class="text-muted">
-                                    {{descripcion}}
-                                </p>
+                                
                             </div>
                         </div>
                     </div>
