--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -19,7 +19,7 @@
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Contraseña nueva</label></h6>
-                <input name="password" type="text" class="form-control" placeholder="Contraseña nueva" required>
+                <input name="password" type="password" class="form-control" placeholder="Contraseña nueva" required>
             </div>
             <div class="row mt-3 ml-4">
                 <input type="submit" name="Register" class="btn-hover color-8" value="Registrarme">
